--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@titaniumnetwork-dev/ultraviolet": "2",
     "@tomphttp/bare-server-node": "^2.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -48,6 +49,5 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
-
   "packageManager": "pnpm@9.15.4"
 }
